--- a/PreparationDonnees.ipynb
+++ b/PreparationDonnees.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -88,14 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(1, 1): 0.0, (1, 2): 55.881241192073894, (1, 3): 79.98515242298852, (1, 4): 93.44559398440298, (1, 5): 66.72223630091695, (1, 6): 85.81526900220813, (1, 7): 118.02195632047493, (1, 8): 75.08452637125717, (1, 9): 106.82857904964196, (1, 10): 79.60531046871382, (1, 11): 86.58161111071013, (1, 12): 90.75400519133962, (1, 13): 86.58161111071013, (1, 14): 90.75400519133962, (2, 1): 55.881241192073894, (2, 2): 0.0, (2, 3): 24.104412560139636, (2, 4): 37.70494812210075, (2, 5): 10.852350067908482, (2, 6): 29.99438570218607, (2, 7): 62.23849318666195, (2, 8): 22.93586116195657, (2, 9): 51.361816377472024, (2, 10): 25.359991739004546, (2, 11): 31.310619280070686, (2, 12): 35.05589063463733, (2, 13): 31.310619280070686, (2, 14): 35.05589063463733, (3, 1): 79.98515242298852, (3, 2): 24.104412560139636, (3, 3): 0.0, (3, 4): 14.042626280784043, (3, 5): 13.272246504818561, (3, 6): 6.296951710297473, (3, 7): 38.24909813732715, (3, 8): 15.684842892925245, (3, 9): 27.914836235628954, (3, 10): 10.618754769911, (3, 11): 9.797852841437985, (3, 12): 11.544558554687248, (3, 13): 9.797852841437985, (3, 14): 11.544558554687248, (4, 1): 93.44559398440298, (4, 2): 37.70494812210076, (4, 3): 14.042626280784043, (4, 4): 0.0, (4, 5): 27.049589223053122, (4, 6): 7.79085537136842, (4, 7): 26.241146638971106, (4, 8): 27.11959592239075, (4, 9): 18.583668312904283, (4, 10): 20.742202957651013, (4, 11): 13.812727474247081, (4, 12): 9.15932154983635, (4, 13): 13.812727474247081, (4, 14): 9.15932154983635, (5, 1): 66.72223630091695, (5, 2): 10.852350067908482, (5, 3): 13.272246504818561, (5, 4): 27.049589223053122, (5, 5): 0.0, (5, 6): 19.280838119857666, (5, 7): 51.392668882332146, (5, 8): 15.570276000261021, (5, 9): 40.61869544228722, (5, 10): 15.832567883469471, (5, 11): 20.777060210104825, (5, 12): 24.254422544985204, (5, 13): 20.777060210104825, (5, 14): 24.254422544985204, (6, 1): 85.81526900220813, (6, 2): 29.99438570218607, (6, 3): 6.296951710297473, (6, 4): 7.79085537136842, (6, 5): 19.280838119857666, (6, 6): 0.0, (6, 7): 32.96947972731067, (6, 8): 20.72091768556333, (6, 9): 23.57099700785497, (6, 10): 14.731788806861447, (6, 11): 10.005355075311748, (6, 12): 8.438010221711007, (6, 13): 10.005355075311748, (6, 14): 8.438010221711007, (7, 1): 118.02195632047493, (7, 2): 62.23849318666195, (7, 3): 38.24909813732715, (7, 4): 26.241146638971106, (7, 5): 51.392668882332146, (7, 6): 32.96947972731068, (7, 7): 0.0, (7, 8): 45.23318330436701, (7, 9): 12.126745365361849, (7, 10): 39.433437012525616, (7, 11): 31.779821126404027, (7, 12): 27.27993433153627, (7, 13): 31.779821126404027, (7, 14): 27.27993433153627, (8, 1): 75.08452637125717, (8, 2): 22.93586116195657, (8, 3): 15.684842892925245, (8, 4): 27.119595922390747, (8, 5): 15.570276000261021, (8, 6): 20.72091768556333, (8, 7): 45.23318330436701, (8, 8): 0.0, (8, 9): 33.228966274431464, (8, 10): 6.447626674693352, (8, 11): 14.298496459708826, (8, 12): 19.648720775211782, (8, 13): 14.298496459708826, (8, 14): 19.648720775211782, (9, 1): 106.82857904964196, (9, 2): 51.361816377472024, (9, 3): 27.914836235628954, (9, 4): 18.583668312904283, (9, 5): 40.618695442287226, (9, 6): 23.57099700785497, (9, 7): 12.126745365361849, (9, 8): 33.228966274431464, (9, 9): 0.0, (9, 10): 27.615139744992707, (9, 11): 20.251617146048098, (9, 12): 16.42053396838209, (9, 13): 20.251617146048098, (9, 14): 16.42053396838209, (10, 1): 79.60531046871382, (10, 2): 25.359991739004546, (10, 3): 10.618754769911, (10, 4): 20.742202957651013, (10, 5): 15.832567883469471, (10, 6): 14.731788806861443, (10, 7): 39.433437012525616, (10, 8): 6.447626674693352, (10, 9): 27.615139744992707, (10, 10): 0.0, (10, 11): 7.953393370516952, (10, 12): 13.249920784295606, (10, 13): 7.953393370516952, (10, 14): 13.249920784295606, (11, 1): 86.58161111071013, (11, 2): 31.310619280070686, (11, 3): 9.797852841437985, (11, 4): 13.812727474247081, (11, 5): 20.777060210104825, (11, 6): 10.005355075311748, (11, 7): 31.779821126404027, (11, 8): 14.298496459708824, (11, 9): 20.251617146048098, (11, 10): 7.953393370516952, (11, 11): 0.0, (11, 12): 5.3764848808837975, (11, 13): 0.0, (11, 14): 5.3764848808837975, (12, 1): 90.75400519133962, (12, 2): 35.055890634637336, (12, 3): 11.544558554687248, (12, 4): 9.15932154983635, (12, 5): 24.254422544985204, (12, 6): 8.438010221711007, (12, 7): 27.27993433153627, (12, 8): 19.648720775211782, (12, 9): 16.42053396838209, (12, 10): 13.249920784295606, (12, 11): 5.3764848808837975, (12, 12): 0.0, (12, 13): 5.3764848808837975, (12, 14): 0.0, (13, 1): 86.58161111071013, (13, 2): 31.310619280070686, (13, 3): 9.797852841437985, (13, 4): 13.812727474247081, (13, 5): 20.777060210104825, (13, 6): 10.005355075311748, (13, 7): 31.779821126404027, (13, 8): 14.298496459708824, (13, 9): 20.251617146048098, (13, 10): 7.953393370516952, (13, 11): 0.0, (13, 12): 5.3764848808837975, (13, 13): 0.0, (13, 14): 5.3764848808837975, (14, 1): 90.75400519133962, (14, 2): 35.055890634637336, (14, 3): 11.544558554687248, (14, 4): 9.15932154983635, (14, 5): 24.254422544985204, (14, 6): 8.438010221711007, (14, 7): 27.27993433153627, (14, 8): 19.648720775211782, (14, 9): 16.42053396838209, (14, 10): 13.249920784295606, (14, 11): 5.3764848808837975, (14, 12): 0.0, (14, 13): 5.3764848808837975, (14, 14): 0.0}\n"
+      "{1: [2, 12.0, 1.0]}\n",
+      "1\n",
+      "{(1, 1): 0.0, (1, 2): 44.6598611591889, (1, 3): 24.58766635024183, (1, 4): 43.918794908671956, (1, 5): 57.86411602222219, (1, 6): 32.215416253776475, (1, 7): 50.20985635487565, (1, 8): 78.80072996420887, (1, 9): 33.61845969439022, (1, 10): 66.84061827970481, (1, 11): 39.41832657621365, (1, 12): 47.27069752757456, (1, 13): 52.32128638525869, (1, 14): 47.27069752757456, (1, 15): 52.32128638525869, (2, 1): 44.6598611591889, (2, 2): 0.0, (2, 3): 55.881241192073894, (2, 4): 79.98515242298852, (2, 5): 93.44559398440298, (2, 6): 66.72223630091695, (2, 7): 85.81526900220813, (2, 8): 118.02195632047493, (2, 9): 75.08452637125717, (2, 10): 106.82857904964196, (2, 11): 79.60531046871382, (2, 12): 86.58161111071013, (2, 13): 90.75400519133962, (2, 14): 86.58161111071013, (2, 15): 90.75400519133962, (3, 1): 24.58766635024183, (3, 2): 55.881241192073894, (3, 3): 0.0, (3, 4): 24.104412560139636, (3, 5): 37.70494812210075, (3, 6): 10.852350067908482, (3, 7): 29.99438570218607, (3, 8): 62.23849318666195, (3, 9): 22.93586116195657, (3, 10): 51.361816377472024, (3, 11): 25.359991739004546, (3, 12): 31.310619280070686, (3, 13): 35.05589063463733, (3, 14): 31.310619280070686, (3, 15): 35.05589063463733, (4, 1): 43.918794908671956, (4, 2): 79.98515242298852, (4, 3): 24.104412560139636, (4, 4): 0.0, (4, 5): 14.042626280784043, (4, 6): 13.272246504818561, (4, 7): 6.296951710297473, (4, 8): 38.24909813732715, (4, 9): 15.684842892925245, (4, 10): 27.914836235628954, (4, 11): 10.618754769911, (4, 12): 9.797852841437985, (4, 13): 11.544558554687248, (4, 14): 9.797852841437985, (4, 15): 11.544558554687248, (5, 1): 57.864116022222184, (5, 2): 93.44559398440298, (5, 3): 37.70494812210076, (5, 4): 14.042626280784043, (5, 5): 0.0, (5, 6): 27.049589223053122, (5, 7): 7.79085537136842, (5, 8): 26.241146638971106, (5, 9): 27.11959592239075, (5, 10): 18.583668312904283, (5, 11): 20.742202957651013, (5, 12): 13.812727474247081, (5, 13): 9.15932154983635, (5, 14): 13.812727474247081, (5, 15): 9.15932154983635, (6, 1): 32.215416253776475, (6, 2): 66.72223630091695, (6, 3): 10.852350067908482, (6, 4): 13.272246504818561, (6, 5): 27.049589223053122, (6, 6): 0.0, (6, 7): 19.280838119857666, (6, 8): 51.392668882332146, (6, 9): 15.570276000261021, (6, 10): 40.61869544228722, (6, 11): 15.832567883469471, (6, 12): 20.777060210104825, (6, 13): 24.254422544985204, (6, 14): 20.777060210104825, (6, 15): 24.254422544985204, (7, 1): 50.20985635487565, (7, 2): 85.81526900220813, (7, 3): 29.99438570218607, (7, 4): 6.296951710297473, (7, 5): 7.79085537136842, (7, 6): 19.280838119857666, (7, 7): 0.0, (7, 8): 32.96947972731067, (7, 9): 20.72091768556333, (7, 10): 23.57099700785497, (7, 11): 14.731788806861447, (7, 12): 10.005355075311748, (7, 13): 8.438010221711007, (7, 14): 10.005355075311748, (7, 15): 8.438010221711007, (8, 1): 78.80072996420887, (8, 2): 118.02195632047493, (8, 3): 62.23849318666195, (8, 4): 38.24909813732715, (8, 5): 26.241146638971106, (8, 6): 51.392668882332146, (8, 7): 32.96947972731068, (8, 8): 0.0, (8, 9): 45.23318330436701, (8, 10): 12.126745365361849, (8, 11): 39.433437012525616, (8, 12): 31.779821126404027, (8, 13): 27.27993433153627, (8, 14): 31.779821126404027, (8, 15): 27.27993433153627, (9, 1): 33.61845969439022, (9, 2): 75.08452637125717, (9, 3): 22.93586116195657, (9, 4): 15.684842892925245, (9, 5): 27.119595922390747, (9, 6): 15.570276000261021, (9, 7): 20.72091768556333, (9, 8): 45.23318330436701, (9, 9): 0.0, (9, 10): 33.228966274431464, (9, 11): 6.447626674693352, (9, 12): 14.298496459708826, (9, 13): 19.648720775211782, (9, 14): 14.298496459708826, (9, 15): 19.648720775211782, (10, 1): 66.84061827970481, (10, 2): 106.82857904964196, (10, 3): 51.361816377472024, (10, 4): 27.914836235628954, (10, 5): 18.583668312904283, (10, 6): 40.618695442287226, (10, 7): 23.57099700785497, (10, 8): 12.126745365361849, (10, 9): 33.228966274431464, (10, 10): 0.0, (10, 11): 27.615139744992707, (10, 12): 20.251617146048098, (10, 13): 16.42053396838209, (10, 14): 20.251617146048098, (10, 15): 16.42053396838209, (11, 1): 39.41832657621365, (11, 2): 79.60531046871382, (11, 3): 25.359991739004546, (11, 4): 10.618754769911, (11, 5): 20.742202957651013, (11, 6): 15.832567883469471, (11, 7): 14.731788806861443, (11, 8): 39.433437012525616, (11, 9): 6.447626674693352, (11, 10): 27.615139744992707, (11, 11): 0.0, (11, 12): 7.953393370516952, (11, 13): 13.249920784295606, (11, 14): 7.953393370516952, (11, 15): 13.249920784295606, (12, 1): 47.27069752757456, (12, 2): 86.58161111071013, (12, 3): 31.310619280070686, (12, 4): 9.797852841437985, (12, 5): 13.812727474247081, (12, 6): 20.777060210104825, (12, 7): 10.005355075311748, (12, 8): 31.779821126404027, (12, 9): 14.298496459708824, (12, 10): 20.251617146048098, (12, 11): 7.953393370516952, (12, 12): 0.0, (12, 13): 5.3764848808837975, (12, 14): 0.0, (12, 15): 5.3764848808837975, (13, 1): 52.32128638525869, (13, 2): 90.75400519133962, (13, 3): 35.055890634637336, (13, 4): 11.544558554687248, (13, 5): 9.15932154983635, (13, 6): 24.254422544985204, (13, 7): 8.438010221711007, (13, 8): 27.27993433153627, (13, 9): 19.648720775211782, (13, 10): 16.42053396838209, (13, 11): 13.249920784295606, (13, 12): 5.3764848808837975, (13, 13): 0.0, (13, 14): 5.3764848808837975, (13, 15): 0.0, (14, 1): 47.27069752757456, (14, 2): 86.58161111071013, (14, 3): 31.310619280070686, (14, 4): 9.797852841437985, (14, 5): 13.812727474247081, (14, 6): 20.777060210104825, (14, 7): 10.005355075311748, (14, 8): 31.779821126404027, (14, 9): 14.298496459708824, (14, 10): 20.251617146048098, (14, 11): 7.953393370516952, (14, 12): 0.0, (14, 13): 5.3764848808837975, (14, 14): 0.0, (14, 15): 5.3764848808837975, (15, 1): 52.32128638525869, (15, 2): 90.75400519133962, (15, 3): 35.055890634637336, (15, 4): 11.544558554687248, (15, 5): 9.15932154983635, (15, 6): 24.254422544985204, (15, 7): 8.438010221711007, (15, 8): 27.27993433153627, (15, 9): 19.648720775211782, (15, 10): 16.42053396838209, (15, 11): 13.249920784295606, (15, 12): 5.3764848808837975, (15, 13): 0.0, (15, 14): 5.3764848808837975, (15, 15): 0.0}\n"
      ]
     }
    ],
@@ -103,7 +105,7 @@
     "#Paramètres\n",
     "N = len(Employees[\"EmployeeName\"])\n",
     "K = len(Tasks[\"TaskId\"])\n",
-    "L = len(Tasks_Unavailabilities[\"TaskId\"])\n",
+    "L = len(Employees_Unavailabilities[\"EmployeeName\"])\n",
     "\n",
     "\n",
     "\n",
@@ -198,7 +200,9 @@
     "Unavailability = dict()\n",
     "\n",
     "for i in range (len(Employees_Unavailabilities[\"EmployeeName\"])):\n",
-    "    a = Employees_Unavailabilities[\"EmployeeName\"][i] \n",
+    "    for k in range (len(Employees[\"EmployeeName\"])):\n",
+    "        if Employees_Unavailabilities[\"EmployeeName\"][i] == Employees[\"EmployeeName\"][k]:\n",
+    "            a = k + 1\n",
     "    b = Employees_Unavailabilities[\"Start\"][i][:5]\n",
     "    bg = b[:2]   #prend les deux premiers caractères\n",
     "    bd = b[-3:]\n",
@@ -220,18 +224,19 @@
     "        b = int(b) + 12\n",
     "    if Employees_Unavailabilities[\"End\"][i][2:] == \"pm\" and c!=12:\n",
     "        c = int(c) + 12 - b\n",
-    "    Unavailability[i] = [a,b,c]\n",
+    "    Unavailability[i+1] = [a,b,c]\n",
     "\n",
-    "#print(Unavailability)\n",
+    "print(Unavailability)\n",
     "\n",
     "\n",
     "BeginningTask = dict()\n",
-    "\n",
-    "for i in range (K+L+2*N): \n",
+    "print(L)\n",
+    "for i in range(K+L+2*N): \n",
     "    if i < L:\n",
     "        a = Employees_Unavailabilities[\"EmployeeName\"][i]\n",
     "        b = Employees_Unavailabilities[\"Start\"][i][:5]\n",
-    "        c = Employees_Unavailabilities[\"Start\"][i]\n",
+    "        c = Employees_Unavailabilities[\"Start\"][i] \n",
+    "\n",
     "    if i >= L and i < L+K:\n",
     "        a = Tasks[\"TaskId\"][i-L]\n",
     "        b = Tasks[\"OpeningTime\"][i-L][:5]\n",
@@ -244,9 +249,10 @@
     "        a = Employees[\"EmployeeName\"][i-L-K-N]\n",
     "        b = Employees[\"WorkingEndTime\"][i-L-K-N][:5]\n",
     "        c = Employees[\"WorkingEndTime\"][i-L-K-N]\n",
+    "\n",
+    "    ### conversion sous format decimal 12:30 => 12,5\n",
     "    bg = b[:2]   #prend les deux premiers caractères\n",
     "    bd = b[-3:]\n",
-    "    \n",
     "    if bg[-1:] == \":\":  #cas où l'heure n'a qu'un chiffre\n",
     "        b = int(b[:1]) + int(bd[:2]) *100/60\n",
     "        \n",
@@ -254,20 +260,25 @@
     "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
     "        \n",
     "    if c[-2:] == 'am':\n",
-    "        #BeginningTask[a] = b\n",
-    "        BeginningTask[i+1] = b\n",
+    "        if bg != '12':\n",
+    "            #BeginningTask[a] = b\n",
+    "            BeginningTask[i+1] = b\n",
+    "        else:\n",
+    "            BeginningTask[i+1] = b - 12   \n",
     "    if c[-2:] == \"pm\":\n",
-    "        #BeginningTask[a] = b + 12\n",
-    "        BeginningTask[i+1] = b + 12\n",
+    "        if bg != '12':\n",
+    "            #BeginningTask[a] = b + 12\n",
+    "            BeginningTask[i+1] = b + 12\n",
+    "        else:\n",
+    "            BeginningTask[i+1] = b\n",
     "\n",
-    " \n",
     "\n",
     "#print(BeginningTask)\n",
     "\n",
     "\n",
     "EndTask = dict()\n",
     "\n",
-    "for i in range (K+L+2*N): \n",
+    "for i in range (0,K+L+2*N): \n",
     "    if i < L:\n",
     "        a = Employees_Unavailabilities[\"EmployeeName\"][i]\n",
     "        b = Employees_Unavailabilities[\"End\"][i][:5]\n",
@@ -294,11 +305,17 @@
     "        b = int(b[:2]) + int(bd[-2:]) *100/60\n",
     "        \n",
     "    if c[-2:] == 'am':\n",
-    "        #EndTask[a] = b\n",
-    "        EndTask[i+1] = b\n",
+    "        if bg != '12':\n",
+    "            #BeginningTask[a] = b\n",
+    "            EndTask[i+1] = b\n",
+    "        else:\n",
+    "            EndTask[i+1] = b - 12   \n",
     "    if c[-2:] == \"pm\":\n",
-    "        #EndTask[a] = b + 12\n",
-    "        EndTask[i+1] = b + 12\n",
+    "        if bg != '12':\n",
+    "            #EndTask[a] = b + 12\n",
+    "            EndTask[i+1] = b + 12\n",
+    "        else:\n",
+    "            EndTask[i+1] = b\n",
     "\n",
     "#print(EndTask)\n",
     "\n",
@@ -311,7 +328,7 @@
     "    DurationTask[a] = b\n",
     "for i in range (L):\n",
     "    a = i + 1\n",
-    "    b = Unavailability[i][2] / 60\n",
+    "    b = Unavailability[i+1][2] / 60\n",
     "    DurationTask[a] = b\n",
     "for i in range (N):\n",
     "    a = L + K + i + 1\n",
@@ -325,8 +342,8 @@
     "\n",
     "for i in range (L+K+2*N):\n",
     "    if i < L:\n",
-    "        L_i = Tasks_Unavailabilities[\"Longitude\"][i]\n",
-    "        l_i = Tasks_Unavailabilities[\"Latitude\"][i]\n",
+    "        L_i = Employees_Unavailabilities[\"Longitude\"][i]\n",
+    "        l_i = Employees_Unavailabilities[\"Latitude\"][i]\n",
     "    if i >= L and i < L+K:\n",
     "        L_i = Tasks[\"Longitude\"][i-L]\n",
     "        l_i = Tasks[\"Latitude\"][i-L]\n",
@@ -336,7 +353,7 @@
     "    if i >= L+K+N :\n",
     "        L_i = Employees[\"Longitude\"][i-L-K-N]\n",
     "        l_i = Employees[\"Latitude\"][i-L-K-N]\n",
-    "    Position[i+1] = [l_i, L_i]\n",
+    "    Position[i+1] = [L_i, l_i]\n",
     "\n",
     "        \n",
     "\n",
@@ -366,7 +383,7 @@
     "# TimeDict : associe à un trajet (i,j) le temps de trajet en h\n",
     "\n",
     "\n",
-    "TimeDict = dict()\n",
+    "#TimeDict = dict()\n",
     "\n",
     "for element in DistDict.items():\n",
     "    t = element[1] / 50\n",
